--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">Location</string>
     <string name="title_activity_maps">Map</string>
     <string name="notification_text">Tracking, tap to cancel</string>
-    <string name="transport_id" translatable="false">userDetails</string>
-    <string name="firebase_path" translatable="false">location-based-services-01</string>
+    <string name="userDetails">userDetails</string>
+    <string name="transport_id" translatable="false">track</string>
+    <string name="firebase_path" translatable="false">location</string>
     <string name="firebase_email" translatable="false">testusername@gmail.com</string>
     <string name="firebase_password" translatable="false">testpassword</string>
 </resources>
