--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,25 @@
     <string name="title_activity_maps">Map</string>
     <string name="notification_text">Tracking, tap to cancel</string>
     <string name="transport_id" translatable="false">userDetails</string>
-    <string name="firebase_path" translatable="false">location-based-services-01</string>
+    <string name="firebase_path" translatable="false">location</string>
     <string name="firebase_email" translatable="false">testusername@gmail.com</string>
     <string name="firebase_password" translatable="false">testpassword</string>
+    <string name="title_activity_phone">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="phone_authentication">Phone Authentication</string>
+    <string name="resend_otp"><u>Resend OTP</u></string>
+    <string name="userDetails">userDetails</string>
+
 </resources>
